# Rishat-Test-Tusk

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
config/: settings.py  urls.py
payment/: admin.py  models.py  urls.py  views.py
payment/api/: serializers.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_ordermodel_session_key.py
payment/static/css/: styles.css
payment/static/js/: main.js
payment/templates/: base.html
payment/templates/payment/: cart.html  product_list.html
